# architecture-bionicpro

./: .gitignore  README.md  TTL_SETUP_SUMMARY.md  docker-compose.yaml  pyproject.toml
Task1/: BionicPRO_C4_model.drawio  README.md
Task2/: BionicPRO_C4_model.drawio  README.md
Task3/: README.md
Task4/: README.md
airflow/: Dockerfile  init_airflow.sh  standalone_entrypoint.sh
airflow/dags/: import_olap_data.py
auth_proxy/: .env.example  Dockerfile  __init__.py  app.py  config.py  encryption.py  keycloak_client.py  main.py  models.py  pyproject.toml  session_manager.py
bionicpro_frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
bionicpro_frontend/src/: App.tsx  index.css  main.tsx
clickhouse_config/: kafka_settings.xml
crm_api/: Dockerfile  README.md  crm.csv  main.py  pyproject.toml
crm_db/: init.sql
dags/: import_olap_data.py
debezium/: Dockerfile  crm-connector-config.json  docker-entrypoint-wrapper.sh  init-connector.sh  telemetry-connector-config.json
keycloak/: APPLY_MFA.sh  MFA_CHANGES_SUMMARY.md  MFA_SETUP.md  README.md  configure_realm.sh  realm-export-no-mfa.json  realm-export_last.json
ldap/: 01-init-roles.ldif
minio/: Dockerfile  init-minio.sh  reports-policy.json
minio_nginx/: Dockerfile  nginx.conf
reports_api/: Dockerfile  README.md  auth_dependencies.py  keycloak_jwt.py  main.py  olap_query_examples.py  pyproject.toml
scripts/: fix_signal_samples_dates.py  fix_signal_samples_uuid.py  import_to_clickhouse.py  init_databases.sh  init_debezium_connectors.sh  install_playwright_browsers.sh  run_all_services.sh  run_frontend.sh  setup_clickhouse_kafka.sh  setup_debezium_connectors.sh  setup_playwright.sh  start_auth_proxy.sh  start_reports_api.sh  stop_all_services.sh  stop_auth_proxy.sh  stop_frontend.sh  stop_python_services.sh  stop_reports_api.sh  update_crm_dates.py
telemetry_api/: Dockerfile  README.md  main.py  pyproject.toml  signal_samples.csv
telemetry_db/: init.sql  postgresql.conf
