[project]
name = "architecture-bionicpro"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.0",
    "httpx>=0.27.0",
    "pyjwt[crypto]>=2.9.0",
    "uvicorn>=0.38.0",
    "pytest>=8.0.0",
    "pytest-playwright>=0.4.0",
    "playwright>=1.40.0",
    "redis>=5.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "authlib>=1.3.0",
    "cryptography>=41.0.0",
    "sqlalchemy[asyncio]>=2.0.44",
    "sqlmodel>=0.0.22",
    "psycopg2-binary>=2.9.9",
    "pytest-asyncio>=0.23.0",
    "clickhouse-connect>=0.7.0",
    "minio>=7.2.0",
    "apache-airflow>=3.1.3",
    "kafka-python>=2.0.2",
]

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["."]
include = ["reports_api*", "tests*"]
exclude = ["frontend*", "keycloak*", "ldap*", "node_modules*", "bionicpro_auth*"]

# Для установки браузеров Playwright выполните: playwright install chromium
# Или используйте скрипт: uv run playwright install chromium
