[project]
name = "telemetry-api"
version = "0.1.0"
description = "Telemetry API для сбора телеметрии с бионических протезов"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.0",
    "uvicorn>=0.38.0",
    "sqlmodel>=0.0.22",
    "psycopg2-binary>=2.9.9",
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]
